app/docs/data/docs/reference/3.1/Symfony/Bundle/Test/ApiTestAssertionsTrait/page.mdx
---
type: Trait
---

# [ApiPlatform\Symfony\Bundle\Test\ApiTestAssertionsTrait](/docs/v3.1/reference/Symfony/Bundle/Test/ApiTestAssertionsTrait)

## See also
- [\Symfony\Bundle\FrameworkBundle\Test\WebTestAssertionsTrait](\Symfony\Bundle\FrameworkBundle\Test\WebTestAssertionsTrait)


## Methods

### assertJsonContains

Asserts that the retrieved JSON contains the specified subset.This method delegates to static::assertArraySubset().

```php
public assertJsonContains(array|string $subset, bool $checkForObjectIdentity, string $message): null
```

#### Parameters

<table><tbody>
<tr><td>subset</td><td>array<br />string</td><td></td></tr><tr><td>checkForObjectIdentity</td><td>bool</td><td></td></tr><tr><td>message</td><td>string</td><td></td></tr>
</tbody>
</table>

#### Returns

null

### assertJsonEquals

Asserts that the retrieved JSON is equal to $json.Both values are canonicalized before the comparison.

```php
public assertJsonEquals(array|string $json, string $message): null
```

#### Parameters

<table><tbody>
<tr><td>json</td><td>array<br />string</td><td></td></tr><tr><td>message</td><td>string</td><td></td></tr>
</tbody>
</table>

#### Returns

null

### assertArraySubset

Asserts that an array has a specified subset.Imported from dms/phpunit-arraysubset, because the original constraint has been deprecated.

```php
public assertArraySubset(iterable $subset, iterable $array, bool $checkForObjectIdentity, string $message): null
```

#### Parameters

<table><tbody>
<tr><td>subset</td><td>iterable</td><td></td></tr><tr><td>array</td><td>iterable</td><td></td></tr><tr><td>checkForObjectIdentity</td><td>bool</td><td></td></tr><tr><td>message</td><td>string</td><td></td></tr>
</tbody>
</table>

#### Returns

null

#### See also
- [https://github.com/sebastianbergmann/phpunit/issues/3494](https://github.com/sebastianbergmann/phpunit/issues/3494)


### assertMatchesJsonSchema



```php
public assertMatchesJsonSchema(object|array|string $jsonSchema, null|int $checkMode, string $message): null
```

#### Parameters

<table><tbody>
<tr><td>jsonSchema</td><td>object<br />array<br />string</td><td></td></tr><tr><td>checkMode</td><td>int</td><td></td></tr><tr><td>message</td><td>string</td><td></td></tr>
</tbody>
</table>

#### Returns

null

### assertMatchesResourceCollectionJsonSchema



```php
public assertMatchesResourceCollectionJsonSchema(string $resourceClass, null|string $operationName, string $format, null|array $serializationContext): null
```

#### Parameters

<table><tbody>
<tr><td>resourceClass</td><td>string</td><td></td></tr><tr><td>operationName</td><td>string</td><td></td></tr><tr><td>format</td><td>string</td><td></td></tr><tr><td>serializationContext</td><td>array</td><td></td></tr>
</tbody>
</table>

#### Returns

null

### assertMatchesResourceItemJsonSchema



```php
public assertMatchesResourceItemJsonSchema(string $resourceClass, null|string $operationName, string $format, null|array $serializationContext): null
```

#### Parameters

<table><tbody>
<tr><td>resourceClass</td><td>string</td><td></td></tr><tr><td>operationName</td><td>string</td><td></td></tr><tr><td>format</td><td>string</td><td></td></tr><tr><td>serializationContext</td><td>array</td><td></td></tr>
</tbody>
</table>

#### Returns

null

### assertResponseIsSuccessful



```php
public assertResponseIsSuccessful(string $message): null
```

#### Parameters

<table><tbody>
<tr><td>message</td><td>string</td><td></td></tr>
</tbody>
</table>

#### Returns

null

### assertResponseStatusCodeSame



```php
public assertResponseStatusCodeSame(int $expectedCode, string $message): null
```

#### Parameters

<table><tbody>
<tr><td>expectedCode</td><td>int</td><td></td></tr><tr><td>message</td><td>string</td><td></td></tr>
</tbody>
</table>

#### Returns

null

### assertResponseFormatSame



```php
public assertResponseFormatSame(null|string $expectedFormat, string $message): null
```

#### Parameters

<table><tbody>
<tr><td>expectedFormat</td><td>string</td><td></td></tr><tr><td>message</td><td>string</td><td></td></tr>
</tbody>
</table>

#### Returns

null

### assertResponseRedirects



```php
public assertResponseRedirects(null|string $expectedLocation, null|int $expectedCode, string $message): null
```

#### Parameters

<table><tbody>
<tr><td>expectedLocation</td><td>string</td><td></td></tr><tr><td>expectedCode</td><td>int</td><td></td></tr><tr><td>message</td><td>string</td><td></td></tr>
</tbody>
</table>

#### Returns

null

### assertResponseHasHeader



```php
public assertResponseHasHeader(string $headerName, string $message): null
```

#### Parameters

<table><tbody>
<tr><td>headerName</td><td>string</td><td></td></tr><tr><td>message</td><td>string</td><td></td></tr>
</tbody>
</table>

#### Returns

null

### assertResponseNotHasHeader



```php
public assertResponseNotHasHeader(string $headerName, string $message): null
```

#### Parameters

<table><tbody>
<tr><td>headerName</td><td>string</td><td></td></tr><tr><td>message</td><td>string</td><td></td></tr>
</tbody>
</table>

#### Returns

null

### assertResponseHeaderSame



```php
public assertResponseHeaderSame(string $headerName, string $expectedValue, string $message): null
```

#### Parameters

<table><tbody>
<tr><td>headerName</td><td>string</td><td></td></tr><tr><td>expectedValue</td><td>string</td><td></td></tr><tr><td>message</td><td>string</td><td></td></tr>
</tbody>
</table>

#### Returns

null

### assertResponseHeaderNotSame



```php
public assertResponseHeaderNotSame(string $headerName, string $expectedValue, string $message): null
```

#### Parameters

<table><tbody>
<tr><td>headerName</td><td>string</td><td></td></tr><tr><td>expectedValue</td><td>string</td><td></td></tr><tr><td>message</td><td>string</td><td></td></tr>
</tbody>
</table>

#### Returns

null

### assertResponseHasCookie



```php
public assertResponseHasCookie(string $name, string $path, null|string $domain, string $message): null
```

#### Parameters

<table><tbody>
<tr><td>name</td><td>string</td><td></td></tr><tr><td>path</td><td>string</td><td></td></tr><tr><td>domain</td><td>string</td><td></td></tr><tr><td>message</td><td>string</td><td></td></tr>
</tbody>
</table>

#### Returns

null

### assertResponseNotHasCookie



```php
public assertResponseNotHasCookie(string $name, string $path, null|string $domain, string $message): null
```

#### Parameters

<table><tbody>
<tr><td>name</td><td>string</td><td></td></tr><tr><td>path</td><td>string</td><td></td></tr><tr><td>domain</td><td>string</td><td></td></tr><tr><td>message</td><td>string</td><td></td></tr>
</tbody>
</table>

#### Returns

null

### assertResponseCookieValueSame



```php
public assertResponseCookieValueSame(string $name, string $expectedValue, string $path, null|string $domain, string $message): null
```

#### Parameters

<table><tbody>
<tr><td>name</td><td>string</td><td></td></tr><tr><td>expectedValue</td><td>string</td><td></td></tr><tr><td>path</td><td>string</td><td></td></tr><tr><td>domain</td><td>string</td><td></td></tr><tr><td>message</td><td>string</td><td></td></tr>
</tbody>
</table>

#### Returns

null

### assertResponseIsUnprocessable



```php
public assertResponseIsUnprocessable(string $message): null
```

#### Parameters

<table><tbody>
<tr><td>message</td><td>string</td><td></td></tr>
</tbody>
</table>

#### Returns

null

### assertBrowserHasCookie



```php
public assertBrowserHasCookie(string $name, string $path, null|string $domain, string $message): null
```

#### Parameters

<table><tbody>
<tr><td>name</td><td>string</td><td></td></tr><tr><td>path</td><td>string</td><td></td></tr><tr><td>domain</td><td>string</td><td></td></tr><tr><td>message</td><td>string</td><td></td></tr>
</tbody>
</table>

#### Returns

null

### assertBrowserNotHasCookie



```php
public assertBrowserNotHasCookie(string $name, string $path, null|string $domain, string $message): null
```

#### Parameters

<table><tbody>
<tr><td>name</td><td>string</td><td></td></tr><tr><td>path</td><td>string</td><td></td></tr><tr><td>domain</td><td>string</td><td></td></tr><tr><td>message</td><td>string</td><td></td></tr>
</tbody>
</table>

#### Returns

null

### assertBrowserCookieValueSame



```php
public assertBrowserCookieValueSame(string $name, string $expectedValue, bool $raw, string $path, null|string $domain, string $message): null
```

#### Parameters

<table><tbody>
<tr><td>name</td><td>string</td><td></td></tr><tr><td>expectedValue</td><td>string</td><td></td></tr><tr><td>raw</td><td>bool</td><td></td></tr><tr><td>path</td><td>string</td><td></td></tr><tr><td>domain</td><td>string</td><td></td></tr><tr><td>message</td><td>string</td><td></td></tr>
</tbody>
</table>

#### Returns

null

### assertRequestAttributeValueSame



```php
public assertRequestAttributeValueSame(string $name, string $expectedValue, string $message): null
```

#### Parameters

<table><tbody>
<tr><td>name</td><td>string</td><td></td></tr><tr><td>expectedValue</td><td>string</td><td></td></tr><tr><td>message</td><td>string</td><td></td></tr>
</tbody>
</table>

#### Returns

null

### assertRouteSame



```php
public assertRouteSame(string $expectedRoute, array $parameters, string $message): null
```

#### Parameters

<table><tbody>
<tr><td>expectedRoute</td><td>string</td><td></td></tr><tr><td>parameters</td><td>array</td><td></td></tr><tr><td>message</td><td>string</td><td></td></tr>
</tbody>
</table>

#### Returns

null

### assertThatForResponse



```php
public assertThatForResponse(PHPUnit\Framework\Constraint\Constraint $constraint, string $message): null
```

#### Parameters

<table><tbody>
<tr><td>constraint</td><td>PHPUnit\Framework\Constraint\Constraint</td><td></td></tr><tr><td>message</td><td>string</td><td></td></tr>
</tbody>
</table>

#### Returns

null

### assertThatForClient



```php
public assertThatForClient(PHPUnit\Framework\Constraint\Constraint $constraint, string $message): null
```

#### Parameters

<table><tbody>
<tr><td>constraint</td><td>PHPUnit\Framework\Constraint\Constraint</td><td></td></tr><tr><td>message</td><td>string</td><td></td></tr>
</tbody>
</table>

#### Returns

null
